Rheokinetics - 2024.ipynb: All done, checked.

--- a/Notebook_Rheokinetics/Rheokinetics - 2024.ipynb
+++ b/Notebook_Rheokinetics/Rheokinetics - 2024.ipynb
@@ -19,8 +19,8 @@
    "metadata": {
     "is_executing": true,
     "ExecuteTime": {
-     "end_time": "2025-12-12T18:22:45.072688Z",
-     "start_time": "2025-12-12T18:22:45.069980Z"
+     "end_time": "2025-12-12T19:43:06.977059Z",
+     "start_time": "2025-12-12T19:43:06.970873Z"
     }
    },
    "source": [
@@ -32,7 +32,7 @@
     "import pandas as pd"
    ],
    "outputs": [],
-   "execution_count": 90
+   "execution_count": 117
   },
   {
    "cell_type": "markdown",
@@ -87,8 +87,8 @@
    "metadata": {
     "is_executing": true,
     "ExecuteTime": {
-     "end_time": "2025-12-12T18:22:45.313443Z",
-     "start_time": "2025-12-12T18:22:45.129625Z"
+     "end_time": "2025-12-12T19:43:07.251354Z",
+     "start_time": "2025-12-12T19:43:07.047222Z"
     }
    },
    "source": [
@@ -140,7 +140,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 91
+   "execution_count": 118
   },
   {
    "cell_type": "markdown",
@@ -237,8 +237,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-12T18:22:45.690168Z",
-     "start_time": "2025-12-12T18:22:45.340279Z"
+     "end_time": "2025-12-12T19:43:08.182097Z",
+     "start_time": "2025-12-12T19:43:07.295527Z"
     }
    },
    "source": [
@@ -292,15 +292,15 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 92
+   "execution_count": 119
   },
   {
    "cell_type": "code",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-12-12T18:22:45.867235Z",
-     "start_time": "2025-12-12T18:22:45.728524Z"
+     "end_time": "2025-12-12T19:43:08.383042Z",
+     "start_time": "2025-12-12T19:43:08.209077Z"
     }
    },
    "source": [
@@ -335,7 +335,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 93
+   "execution_count": 120
   },
   {
    "cell_type": "markdown",
@@ -359,7 +359,7 @@
    "metadata": {},
    "source": [
     "Answer:\n",
-    "1. As the temperature increases the polymer's glass transistion temperature is reached and as it becomes more mobile the storage modulus is lowered.\n",
+    "1. As the temperature increases the polymer's glass transistion temperature is reached and as it becomes more mobile the storage modulus is lowered it begins behaves more as a liquid and loses its ability to retain its shape.\n",
     "2. The polymer chains become more mobile and this allows for internal friction in the polymer network. This is then able to dissipate the energy which shows as a spike in loss modulus, this then decreases as the chains keep increasing in mobility.\n"
    ]
   },
@@ -382,8 +382,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-12T18:22:46.757259Z",
-     "start_time": "2025-12-12T18:22:45.889080Z"
+     "end_time": "2025-12-12T19:43:09.311725Z",
+     "start_time": "2025-12-12T19:43:08.427411Z"
     }
    },
    "source": [
@@ -477,7 +477,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 94
+   "execution_count": 121
   },
   {
    "cell_type": "markdown",
@@ -491,8 +491,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-12T18:22:47.859984Z",
-     "start_time": "2025-12-12T18:22:46.779612Z"
+     "end_time": "2025-12-12T19:43:10.225206Z",
+     "start_time": "2025-12-12T19:43:09.323007Z"
     }
    },
    "source": [
@@ -571,7 +571,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 95
+   "execution_count": 122
   },
   {
    "cell_type": "markdown",
@@ -593,8 +593,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-12T18:22:47.946840Z",
-     "start_time": "2025-12-12T18:22:47.882278Z"
+     "end_time": "2025-12-12T19:43:10.321869Z",
+     "start_time": "2025-12-12T19:43:10.250197Z"
     }
    },
    "source": [
@@ -603,6 +603,7 @@
     "DMA = DMA.drop(index=[DMA.index[i] for i in range(-1,-43,-1)])\n",
     "DMA.head()\n",
     "freq_list = [0.200000002980232, 1, 5, 10, 20]\n",
+    "print(\"Peak of loss modulus\")\n",
     "for i, freq in enumerate(freq_list):\n",
     "    DMA_freq = DMA.loc[(DMA['Freq.'] == freq)&(DMA['Temp.']<200)]\n",
     "    print(f\"Tg at {round(freq, 2)} = \"+str(round(DMA_freq[\"Temp.\"][DMA_freq[\"E\\\"(G\\\")\"]==DMA_freq[\"E\\\"(G\\\")\"].max()].iloc[0],2))+\" C\")"
@@ -612,6 +613,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Peak of loss modulus\n",
       "Tg at 0.2 = 90.11 C\n",
       "Tg at 1 = 93.02 C\n",
       "Tg at 5 = 94.56 C\n",
@@ -620,14 +622,14 @@
      ]
     }
    ],
-   "execution_count": 96
+   "execution_count": 123
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-12T18:22:48.032152Z",
-     "start_time": "2025-12-12T18:22:47.968713Z"
+     "end_time": "2025-12-12T19:43:10.409407Z",
+     "start_time": "2025-12-12T19:43:10.346162Z"
     }
    },
    "source": [
@@ -636,6 +638,7 @@
     "DMA = DMA.drop(index=[DMA.index[i] for i in range(-1,-43,-1)])\n",
     "DMA.head()\n",
     "freq_list = [0.200000002980232, 1, 5, 10, 20]\n",
+    "print(\"Peak of tan delta\")\n",
     "for i, freq in enumerate(freq_list):\n",
     "    DMA_freq = DMA.loc[(DMA['Freq.'] == freq)&(DMA['Temp.']<200)]\n",
     "    print(f\"Tg at {round(freq, 2)} = {round(DMA_freq[\"Temp.\"][(DMA_freq[\"E\\\"(G\\\")\"] / DMA_freq[\"E\\'(G\\')\"]) == (\n",
@@ -646,6 +649,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Peak of tan delta\n",
       "Tg at 0.2 = 97.92 C\n",
       "Tg at 1 = 101.0 C\n",
       "Tg at 5 = 104.45 C\n",
@@ -654,7 +658,7 @@
      ]
     }
    ],
-   "execution_count": 97
+   "execution_count": 124
   },
   {
    "cell_type": "markdown",
@@ -669,8 +673,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-12-12T18:22:48.178355Z",
-     "start_time": "2025-12-12T18:22:48.053428Z"
+     "end_time": "2025-12-12T19:43:10.617923Z",
+     "start_time": "2025-12-12T19:43:10.439143Z"
     }
    },
    "source": [
@@ -698,18 +702,19 @@
     "\n",
     "# Comment\n",
     "\"\"\"\n",
-    "It is clear that the higher the frequency of the test the higher the calculated Tg. This is due to polymers being visco-elastic and the mechanical response is strain rate dependent.\n",
+    "It is clear that the higher the frequency of the test the higher the calculated Tg. This is due to polymers being visco-elastic and the mechanical response is strain rate dependent, they become stiffer with increasing strain rate.\n",
     "The loads on the structure could have a high frequency or strain rate which would make the higher Tg applicable so it is important to use the Tg relevant to your load's strain rate or to use this effect in your model and therefore model your object visco-elastically.\n",
+    "In materials that must deform such as seals or tires this effect can make the previously soft material very hard and fail.\n",
     "\"\"\""
    ],
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\nIt is clear that the higher the frequency of the test the higher the calculated Tg.\\n\\n'"
+       "\"\\nIt is clear that the higher the frequency of the test the higher the calculated Tg. This is due to polymers being visco-elastic and the mechanical response is strain rate dependent, they become stiffer with increasing strain rate.\\nThe loads on the structure could have a high frequency or strain rate which would make the higher Tg applicable so it is important to use the Tg relevant to your load's strain rate or to use this effect in your model and therefore model your object visco-elastically.\\nIn materials that must deform such as seals or tires this effect can make the previously soft material very hard and fail.\\n\""
       ]
      },
-     "execution_count": 98,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -724,7 +729,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 98
+   "execution_count": 125
   },
   {
    "cell_type": "markdown",
@@ -768,8 +773,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-12T18:22:48.272557Z",
-     "start_time": "2025-12-12T18:22:48.200820Z"
+     "end_time": "2025-12-12T19:43:10.729285Z",
+     "start_time": "2025-12-12T19:43:10.645581Z"
     }
    },
    "source": [
@@ -789,7 +794,7 @@
     "        pass\n",
     "\n",
     "    vf = 0.4\n",
-    "\n",
+    "    # Equations used from the book Processing of Polymer Composite Manufacturing\n",
     "    K11 = (2*df**2/C1)*((1-vf**3)/vf**2)\n",
     "    K22 = C2*((vfmax/vf)**0.5-1)**(5/2)*(df**2/4)\n",
     "\n",
@@ -803,7 +808,6 @@
     "    Kxx45 = K11*np.cos(theta45)**2 + K22*np.sin(theta45)**2\n",
     "    Kxx0 = K11*np.cos(theta0)**2 + K22*np.sin(theta0)**2\n",
     "    KxxAvg = 0.2*Kxx90+0.3*Kxx45+0.5*Kxx0\n",
-    "    print(Kxx0, Kxx45, Kxx0, KxxAvg)\n",
     "    # Kyy = K11*np.sin(theta)**2 + K22*np.cos(theta)**2\n",
     "    # Q = (dL/dt)*A\n",
     "    # Q = ((K*A)/(eta*L)) dP\n",
@@ -830,14 +834,6 @@
    ],
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.0057894736842103e-11 5.27825530807572e-12 1.0057894736842103e-11 6.7121471367056346e-12\n",
-      "1.081698113207547e-11 5.664896847945207e-12 1.081698113207547e-11 7.210522133184285e-12\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "<Figure size 640x480 with 1 Axes>"
@@ -848,13 +844,14 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 99
+   "execution_count": 126
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Answer:\n",
+    "The K value is calculated for the layers using the equations from the book Processing of Polymer Composites and then the transformations are applied according to their angle. Then a weighted average is taken according to their ratio in the layup to find the approximate K. Since the arrangement of the fibres is not known, both options are plotted to allow us to take the worst case scenario for the sizing of our system.\n",
     "\n"
    ]
   },
@@ -875,7 +872,7 @@
    "metadata": {},
    "source": [
     "Reflection:\n",
-    "The pressure required increases quadratically with the infusion time and far exceeds regular infusion pressures of around 1 bar for vacuum assisted resin infusion."
+    "The pressure required increases quadratically with the infusion time and far exceeds regular infusion pressures of around 1 bar for vacuum assisted resin infusion. The pressure reaches 6 bars so a pressurized resin infusion method will be needed for this panel & infusion strategy."
    ]
   },
   {
@@ -885,9 +882,10 @@
    },
    "source": [
     "Optimization strategy:\n",
-    "One approach would be to infuse the panel from the top side, this would increase the length the resin can infuse the panel from and decease the length of panel that it would travel.\n",
+    "One approach would be to infuse the panel from the top side, this would increase the length the resin can infuse the panel from and decrease the length of panel that it would travel.\n",
     "\n",
-    "Another approach would be to infuse it from the center of the panel along the length direction outwards in the vertical direction. You would need 2 pumps to apply the vacuum as there would be to outlets but this would provide the fastest soloution witout needing to insert resin from additional points."
+    "Another approach would be to infuse it from the center of the panel along the length direction outwards in the vertical direction. You would need 2 pumps to apply the vacuum as there would be to outlets but this would provide the fastest solution without needing to insert resin from additional points.\n",
+    "\n"
    ]
   },
   {
@@ -895,8 +893,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-12-12T18:22:48.356940Z",
-     "start_time": "2025-12-12T18:22:48.291607Z"
+     "end_time": "2025-12-12T19:43:10.836844Z",
+     "start_time": "2025-12-12T19:43:10.750452Z"
     }
    },
    "source": [
@@ -970,7 +968,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 100
+   "execution_count": 127
   },
   {
    "cell_type": "markdown",
@@ -979,7 +977,7 @@
    },
    "source": [
     "Reflection:\n",
-    "The infusion strategies selected both reduce the maximum infusion pressure, the first reduces it 11 times and the second reduces it by 44 times compared to the original infusion strategy."
+    "The infusion strategies selected both reduce the maximum infusion pressure, the first reduces it 11 times and the second reduces it by 44 times compared to the original infusion strategy. The side infusion is possible with the same hardware as the original infusion strategy while the second option may need additional inlets for the vacuum pump, but it is clearly the best infusion strategy."
    ]
   },
   {
@@ -1012,8 +1010,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-12T18:22:48.467526Z",
-     "start_time": "2025-12-12T18:22:48.375816Z"
+     "end_time": "2025-12-12T19:43:10.969422Z",
+     "start_time": "2025-12-12T19:43:10.857111Z"
     }
    },
    "source": [
@@ -1071,7 +1069,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 101
+   "execution_count": 128
   },
   {
    "cell_type": "markdown",
@@ -1085,8 +1083,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-12T18:22:48.546652Z",
-     "start_time": "2025-12-12T18:22:48.485563Z"
+     "end_time": "2025-12-12T19:43:11.080314Z",
+     "start_time": "2025-12-12T19:43:10.997179Z"
     }
    },
    "source": [
@@ -1152,7 +1150,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 102
+   "execution_count": 129
   },
   {
    "cell_type": "markdown",
@@ -1168,12 +1166,9 @@
    },
    "source": [
     "Comment:\n",
-    "The thinning of the part would drastically decrease the out of plane thickness.\n",
-    "The sharp changes would leave resin rich areas where the fibres begin to steer past the step in the mold.\n",
-    "The sharp increases of fibre volume fraction could cause stress concentrations locally.\n",
-    "In reality the resin will not step in pressure in such a sharp way as it will flow past the step and not flow into it and spike the pressure.\n",
+    "The thinning of the part would drastically decrease the out of plane bending stiffness of the product. The sharp changes would leave resin rich areas where the fibres begin to steer past the step in the mold. The sharp increases of fibre volume fraction could cause stress concentrations locally as the layers must deform. In reality the resin will not step in pressure in such a sharp way as it will flow past the step and not flow into it and spike the pressure.\n",
     "\n",
-    "Tolerances are too broad for this application as the thickness can vary by 30%. I would also expect this data to relate to a taper in the mold rather than steps in it as this is more likely in machining and related molt production techniques. Rather the data is 3 points at which the mold were inspected and incorrectly interpolated."
+    "Tolerances are too broad for this application as the thickness can vary by 30%. I would also expect this data to relate to a taper in the mold rather than steps in it as this is more likely defect in machining and related mold production techniques. Rather the data is 3 points at which the mold were inspected and incorrectly interpolated."
    ]
   }
  ],
